eric-esoa-subsystem-management-service/src/test/resources/contracts/v2/subsystemTypes/positive/getSubsystemTypes.groovy
/*******************************************************************************
 * COPYRIGHT Ericsson 2023-2024
 *
 *
 *
 * The copyright to the computer program(s) herein is the property of
 *
 * Ericsson Inc. The programs may be used and/or copied only with written
 *
 * permission from Ericsson Inc. or in accordance with the terms and
 *
 * conditions stipulated in the agreement/contract under which the
 *
 * program(s) have been supplied.
 ******************************************************************************/
package contracts.v2.subsystemTypes.positive

import org.springframework.cloud.contract.spec.Contract;

Contract.make {
    description(
        """
            ```
            when:
                A client makes a request to get the list of subsystem types
            then:
                the subsystem types list is returned
            ```
        """
        )
    request {
        method 'GET'
        url "/subsystem-manager/v2/subsystem-types"
        headers {
            accept(applicationJson())
        }
    }
    response {
        status OK()
        headers {
            contentType(applicationJson())
        }
        body(file("responseJson/GetSubsystemTypesResponse.json"))
    }
}
